Fix JVM dependent generic type parameter resolution
This stops testWriteReadOperations failing on some Jenkins nodes. Also update deprecated method usage

Change-Id: I049db5c0366ab840996ae988625dd9e296616a5f